Added extension id

--- a/Day-02/last5sites/manifest.json
+++ b/Day-02/last5sites/manifest.json
@@ -21,5 +21,11 @@
     "permissions" : [
         "storage",
         "tabs"
-    ]
+    ],
+
+    "browser_specific_settings" : {
+        "gecko" : {
+            "id" : "last5places@scramjet911"
+        }
+    }
 }
