--- a/Day-04/FontIncrease/manifest.json
+++ b/Day-04/FontIncrease/manifest.json
@@ -5,17 +5,17 @@
     
     "description" : "An extension that can increase the Font Size of the website without zooming in",
     
-    "background" : {
-        "scripts" : ["background.js"]
-    },
-
     "browser_action" : {
         "default_title" : "Text Size",
         "default_icon" : {
-            "48" : "icons/esc_48.jpg",
-            "96" : "icons/esc_96.jpg"
+            "48" : "icons/48_esc.jpg",
+            "96" : "icons/96_esc.jpg"
         },
-        "default_popup" : "popup/sizeinc.js"
+        "default_popup" : "popup/sizeinc.html"
+    },
+
+    "background" : {
+        "scripts" : ["background.js"]
     },
 
     "permissions" : [
@@ -23,6 +23,8 @@
     ],
 
     "browser_specific_settings" : {
-        "gecko" : "fontincrease@scramjet911"
+        "gecko" : {
+            "id" : "fontincrease@scramjet911"
+        }
     }
 }
