--- a/Day-04, 05/FontIncrease/manifest.json
+++ b/Day-04, 05/FontIncrease/manifest.json
@@ -19,7 +19,8 @@
     },
 
     "permissions" : [
-        "storage"
+        "storage",
+        "<all_urls>"
     ],
 
     "browser_specific_settings" : {
