--- a/Day-04, 05/FontIncrease/manifest.json
+++ b/Day-04, 05/FontIncrease/manifest.json
@@ -20,7 +20,7 @@
 
     "permissions" : [
         "storage",
-        "<all_urls>"
+        "webNavigation"
     ],
 
     "browser_specific_settings" : {
